--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,6 @@
 
 ::-webkit-scrollbar-thumb{
   width: 10px;
-  background-color: yellowgreen;
+  background-color: whitesmoke;
   border-radius: 10px;
 }
